--- a/package.json
+++ b/package.json
@@ -20,6 +20,19 @@
   "homepage": "https://github.com/VasilievAdm/Node#readme",
   "dependencies": {
     "colors": "^1.4.0",
-    "moment-precise-range-plugin": "^1.3.0"
-  }
+    "inquirer": "^8.2.0",
+    "moment-precise-range-plugin": "^1.3.0",
+    "yargs": "^17.5.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^28.1.6",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
+  },
+  "bin": {
+    "reader": "cli.js"
+  }  
 }
+
